Bug 348120 - When there is only 1 brush preset in a tag, it's not possible to pick it up.
Summary: When there is only 1 brush preset in a tag, it's not possible to pick it up.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.9.4
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 355886 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-22 23:55 UTC by mvowada
Modified: 2017-01-04 11:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video example. (454.87 KB, video/mp4)
2015-05-22 23:57 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2015-05-22 23:55:52 UTC
When there is only 1 brush preset in a tag, it's not possible to pick it up.
See also the video below.

Reproducible: Always

Steps to Reproduce:
1. Create a new tag with only 1 brush preset in it
2. Switch to it

Actual Results:  
It's not possible to select and use the brush preset.
Despite that it's even highlighted in the tag list.

Expected Results:  
Should be possible to use the preset.
Comment 1 mvowada 2015-05-22 23:57:07 UTC
Created attachment 92786 [details]
Video example.
Comment 2 Halla Rempt 2015-05-23 08:57:58 UTC
Git commit b2cc77e89e4c246734f910db171f62afd2ad1ada by Boudewijn Rempt.
Committed on 23/05/2015 at 08:55.
Pushed by rempt into branch 'calligra/2.9'.

This makes it possible to select a resource even if there's only
one.

M  +1    -0    libs/widgets/KoResourceItemChooser.cpp

http://commits.kde.org/calligra/b2cc77e89e4c246734f910db171f62afd2ad1ada
Comment 3 mvowada 2015-05-23 10:51:17 UTC
Hello and thank you :) problem solved!

(There remains still a minor discrepancy maybe, for which I will open a separate report, that is:
when you switch to a new tag list, there's always the first brush preset highlighted, even though it's not the current active preset.).
Comment 4 Halla Rempt 2015-06-17 09:58:08 UTC
This patch apparently broke the / preset switch shortcut.
Comment 5 Dmitry Kazakov 2015-06-17 13:18:50 UTC
Git commit 603562c56d1ecc21853319457cc2100b4894d862 by Dmitry Kazakov.
Committed on 17/06/2015 at 13:18.
Pushed by dkazakov into branch 'calligra/2.9'.

Revert b2cc77e89 "This makes it possible to select a resource even if there's only
one."

That commit broke '/' shortcut and introduces some other bugs
Related: bug 348826

M  +0    -1    libs/widgets/KoResourceItemChooser.cpp

http://commits.kde.org/calligra/603562c56d1ecc21853319457cc2100b4894d862
Comment 6 Stefano Bonicatti 2015-06-21 21:37:28 UTC
Git commit f5df93f0f2017e12f2b5670ad3df4f53969c5f28 by Stefano Bonicatti.
Committed on 21/06/2015 at 21:34.
Pushed by stefanobonicatti into branch 'calligra/2.9'.

Fix selection bugs in the preset docker

Now is possible to select again a brush that is the only one in the
selected tag category.

When switching tag categories if the selected preset is present in the new
category, it will be selected, otherwise no preset will be, visually, selected,
but the active one won't be changed, so the user can still paint.

Added several checks to avoid unneeded executions and event emitting.
Especially now it shouldn't be possible to break the previous preset
selection/shortcut anymore.
Related: bug 348444
Differential Revision: https://phabricator.kde.org/D124

M  +25   -6    krita/ui/kis_paintop_box.cc
M  +22   -13   libs/widgets/KoResourceItemChooser.cpp
M  +1    -1    libs/widgets/KoResourceItemChooser.h
M  +5    -6    libs/widgets/KoResourceModel.cpp
M  +2    -2    libs/widgets/KoResourceModel.h

http://commits.kde.org/calligra/f5df93f0f2017e12f2b5670ad3df4f53969c5f28
Comment 7 mvowada 2015-06-30 22:32:58 UTC
Hello and thank you once again :-)
I think that this commit has been reverted by commit 411067b1de29c46b0e4db042843843937779dd9b, I will reopen this report for now.
Comment 8 wolthera 2016-07-08 14:15:53 UTC
*** Bug 355886 has been marked as a duplicate of this bug. ***
Comment 9 mvowada 2017-01-04 11:19:34 UTC
Closing this report as 'FIXED' since I can't reproduce this issue in Krita 3.1.1. Thanks!